#Nmap Changelog ($Id$); -*-text-*-

o Added a new service detection match for WatchGuard Authentication Gateway. 
  [Paulino Calderon]

o [NSE][GH#1074] Added three new fingerprints to http-default-accounts
  (ActiveMQ, Purestorage and Axis Network Cameras) [Rob Fitzpatrick, Paulino Calderon]

o [NSE] tls-alpn checks TLS servers for Application Layer Protocol Negotiation
  (ALPN) support and reports supported protocols. ALPN largely replaces NPN,
  which tls-nextprotoneg was written for. [Daniel Miller]

o [NSE][GH#1038][GH#1037] Script qscan was not observing interpacket delays
  (parameter qscan.delay). [nnposter]

o [NSE][GH#1046] Script http-headers now fails properly if the target does not
  return a valid HTTP response. [spacewander]

o [NSE] rsa-vuln-roca checks for RSA keys generated by Infineon TPMs vulnerable
  to Return Of Coppersmith Attack (ROCA) (CVE-2017-15361). Checks SSH and TLS
  services. [Daniel Miller]

o [Ncat][Nsock][GH#972] Remove RC4 from the list of TLS ciphers used by
  default, in accordance with RFC 7465. [Codarren Velvindron]

o [NSE][GH#1022] Fix a false positive condition in ipmi-cipher-zero caused by
  not checking the error code in responses. Implementations which return an
  error are not vulnerable. [Juho Jokelainen]

o [GH#978] Fixed Nsock on Windows giving errors when selecting on STDIN. This
  was causing Ncat 7.60 in connect mode to quit with error:
   libnsock select_loop(): nsock_loop error 10038: An operation was attempted on something that is not a socket.
  [nnposter]

o [NSE][GH#958] Two new libraries for NSE.
  - punycode
  - idna
  [Rewanth Cool]

o [NSE] New fingerprints for http-enum:
  - [GH#954] Telerik UI CVE-2017-9248 [Harrison Neal]
  - [GH#767] Many WordPress version detections [Rewanth Cool]

o [NSE] http-trane-info obtains information from Trane Tracer SC controllers
  and connected HVAC devices. [Pedro Joaquin]

o [GH#981][GH#984][GH#996][GH#975] Fixed Ncat proxy authentication issues: